use display to view and score finish

--- a/templates/display.html
+++ b/templates/display.html
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-    <h1>Excel Data</h1>
+    <h1>技擊類運動競賽</h1>
     <div class="container">
         {% for table_info in tables %}
             <div class="table-container">
