--- a/templates/score.html
+++ b/templates/score.html
@@ -47,6 +47,7 @@
             border-radius: 5px;
             cursor: pointer;
         }
+        
 
         .header button:hover {
             background-color: darkorange;
@@ -218,7 +219,11 @@
     <div class="header">
         <input type="text" id="match_order" placeholder="場序" value="1">
         <input type="text" id="match_category" placeholder="比賽項目組別" value="男子組">
-        <button onclick="openSettings()">設定</button>
+        <!-- <button onclick="openSettings()">設定</button> -->
+        <button onclick="openSettings()" style="background: none; border: none; cursor: pointer;">
+            <img src="https://img.icons8.com/material-outlined/48/ffffff/settings.png" alt="Settings Icon">
+        </button>
+        
     </div>
 
     <div class="scoreboard">
