--- a/templates/display.html
+++ b/templates/display.html
@@ -30,7 +30,7 @@
             background-color: #e0e0e0;
         }
         .table-striped tbody tr:nth-of-type(odd) {
-            background-color: #e9e9e9;
+            background-color: #eeeeee;
         }
         .table tbody tr:nth-child(-n+4) {
             background-color: #ffe5b4; /* 淺橘色 */
