--- a/templates/score.html
+++ b/templates/score.html
@@ -19,7 +19,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100\%;
+            height: 100%;
             width: 100%;
         }
         .container {
@@ -72,18 +72,31 @@
             border: 2px solid white;
             padding: 10px;
             margin-bottom: 10px;
+            cursor: pointer;
         }
         .leader {
-            background-color: yellow;
-            color: black;
-            padding: 5px;
             font-size: 1.2em;
             margin-top: -15px;
+            cursor: pointer;
+            height: 30px; /* 确保占位 */
+            line-height: 30px; /* 垂直居中 */
+            color: black;
+        }
+        .timer-container {
+            display: inline-block;
+            margin-top: 20px;
         }
         .timer {
-            margin-top: 20px;
             font-size: 3em;
             color: yellow;
+            cursor: pointer;
+            display: inline-block;
+            vertical-align: middle;
+        }
+        .settings-button {
+            display: inline-block;
+            vertical-align: middle;
+            margin-left: 10px;
         }
     </style>
 </head>
@@ -101,20 +114,99 @@
                 <div class="team blue">
                     <div class="team-name">TPE</div>
                     <div class="team-member">馮冠傑</div>
-                    <div class="score">3</div>
-                    <div class="leader">領先方</div>
+                    <div class="score" onclick="incrementScore(this)">0</div>
+                    <div class="leader" onclick="toggleLeader(this)"></div>
                 </div>
                 <div class="team red">
                     <div class="team-name">UZB</div>
                     <div class="team-member">馮冠傑</div>
-                    <div class="score">3</div>
+                    <div class="score" onclick="incrementScore(this)">0</div>
+                    <div class="leader" onclick="toggleLeader(this)"></div>
                 </div>
             </div>
 
-            <div class="timer">04:00</div>
-            <div class="timer"></div>
-            <div class="timer"></div>
+            <div class="timer-container">
+                <div class="timer" onclick="toggleTimer()">04:00</div>
+                <button class="settings-button" onclick="openSettings()" style="background: none; border: none; cursor: pointer;">
+                    <img src="https://img.icons8.com/material-outlined/48/ffffff/settings.png" alt="Settings Icon">
+                </button>
+            </div>
         </div>
     </div>
+
+    <script>
+        let timerInterval;
+        let isTimerRunning = false;
+        let timeRemaining = 240;  // 初始時間為4分鐘（240秒）
+
+        function incrementScore(element) {
+            let score = parseInt(element.innerText);
+            element.innerText = score + 1;
+        }
+
+        function toggleLeader(element) {
+            if (element.innerText === "") {
+                element.innerText = "領先方";
+                element.style.backgroundColor = "yellow"; // 添加背景颜色
+                element.style.color = "black"; // 改变字体颜色
+            } else {
+                element.innerText = "";
+                element.style.backgroundColor = ""; // 恢复背景颜色
+                element.style.color = "black"; // 恢复字体颜色
+            }
+        }
+
+        function updateTimer() {
+            if (timeRemaining > 0) {
+                timeRemaining--;
+                updateTimerDisplay();
+            } else {
+                clearInterval(timerInterval);
+                isTimerRunning = false;
+                alert("時間到！");
+            }
+        }
+
+        function updateTimerDisplay() {
+            let minutes = Math.floor(timeRemaining / 60);
+            let seconds = timeRemaining % 60;
+            document.querySelector('.timer').innerText = `${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
+        }
+
+        function toggleTimer() {
+            if (isTimerRunning) {
+                clearInterval(timerInterval);
+            } else {
+                timerInterval = setInterval(updateTimer, 1000);
+            }
+            isTimerRunning = !isTimerRunning;
+        }
+
+        function setTimer(minutes, seconds) {
+            timeRemaining = minutes * 60 + seconds;
+            updateTimerDisplay();
+        }
+
+        function openSettings() {
+            let timeInput = prompt("請輸入倒數時間 (格式: MM:SS)", "5:00");
+            
+            if (timeInput) {
+                let timerParts = timeInput.split(':');
+                let minutes = parseInt(timerParts[0]);
+                let seconds = parseInt(timerParts[1]);
+
+                if (!isNaN(minutes) && !isNaN(seconds)) {
+                    setTimer(minutes, seconds);
+                } else {
+                    alert("請輸入有效的時間格式");
+                }
+            }
+        }
+
+        // 點擊計時器設置時間
+        document.querySelector('.timer').addEventListener('dblclick', function() {
+            openSettings();
+        });
+    </script>
 </body>
 </html>
