--- a/templates/wrest_score.html
+++ b/templates/wrest_score.html
@@ -117,13 +117,13 @@
         <div class="scoreboard">
             <div class="team blue">
                 <div class="team-name">TPE</div>
-                <div class="team-member">{{ player1 or "馮冠傑" }}</div>
+                <div class="team-member">{{ player1 or "選手一" }}</div>
                 <div class="score" onclick="incrementScore(this)">0</div>
                 <div class="leader" onclick="toggleLeader(this)"></div>
             </div>
             <div class="team red">
                 <div class="team-name">UZB</div>
-                <div class="team-member">{{ player2 or "馮冠傑" }}</div>
+                <div class="team-member">{{ player2 or "選手二" }}</div>
                 <div class="score" onclick="incrementScore(this)">0</div>
                 <div class="leader" onclick="toggleLeader(this)"></div>
             </div>
